// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Visualization panel when panel is hidden should match snapshot 1`] = `
<Fragment>
  <div
    className="visualization__side-panel"
    style={
      Object {
        "animationDuration": "0s",
        "opacity": 0,
        "transform": "translateX(350px)",
        "transitionDuration": "0s",
      }
    }
  >
    <SidePanelTabs
      onClick={[Function]}
      selectedTab="info"
      tabs={Array []}
      togglePanel={[Function]}
    />
    <withRouter(Connect(Component)) />
  </div>
  <RoundButton
    className="visualization__side-panel-button"
    icon={
      Object {
        "icon": Array [
          448,
          512,
          Array [],
          "f0c9",
          "M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z",
        ],
        "iconName": "bars",
        "prefix": "fas",
      }
    }
    onClick={[Function]}
    size="lg"
    style={
      Object {
        "opacity": 1,
      }
    }
    type="button"
  />
</Fragment>
`;

exports[`Visualization panel when panel visible should match snapshot 1`] = `
<Fragment>
  <div
    className="visualization__side-panel"
    style={
      Object {
        "animationDuration": "0s",
        "opacity": 1,
        "transform": "translateX(-10px)",
        "transitionDuration": "0s",
      }
    }
  >
    <SidePanelTabs
      onClick={[Function]}
      selectedTab="info"
      tabs={Array []}
      togglePanel={[Function]}
    />
    <withRouter(Connect(Component)) />
  </div>
  <RoundButton
    className="visualization__side-panel-button"
    icon={
      Object {
        "icon": Array [
          448,
          512,
          Array [],
          "f0c9",
          "M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z",
        ],
        "iconName": "bars",
        "prefix": "fas",
      }
    }
    onClick={[Function]}
    size="lg"
    style={
      Object {
        "opacity": 0,
      }
    }
    type="button"
  />
</Fragment>
`;
